lib/bait/tests/inout_error/var_redefinition.out
lib/bait/tests/inout_error/var_redefinition.in.bt:2:7 error: redefinition of same
