lib/bait/tests/inout_error/var_redefinition.in.bt
same := 123
same := true
